kubernetes/apps/networking/external-services/minio/endpoints.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/endpoints-v1.json
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-s3
subsets:
  - addresses:
      - ip: 192.168.178.5
    ports:
      - name: http
        port: 9000
        protocol: TCP
