kubernetes/apps/networking/external-services/minio/service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: minio-s3
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: http
  type: ClusterIP
