kubernetes/apps/networking/external-services/minio/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-s3
  labels:
    app.kubernetes.io/name: minio-s3
spec:
  ingressClassName: external
  rules:
    - host: &host minio.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-s3
                port:
                  number: 9000
  tls:
    - hosts:
        - *host
